Fix button alignment

--- a/src/styles/components/_form.sass
+++ b/src/styles/components/_form.sass
@@ -73,6 +73,7 @@ form.cluster-name
   .btn-group
     float: none
     margin-left: 4px
+    top: -2px
   
 a.cluster-name:hover
   text-decoration-style: dotted
